--- a/css.css
+++ b/css.css
@@ -13,7 +13,7 @@ body, h1, h2, p {
 
 /* Body section */
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: "Namdhinggo", serif;
     background: linear-gradient(to bottom, #ADD8E6, #ffffff );
     line-height: 1.6;
     padding: 0;
