--- a/css.css
+++ b/css.css
@@ -8,7 +8,7 @@ body, h1, h2, p {
 .container {
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
+    min-height: 100vh;
 }
 
 /* Body section */
@@ -26,7 +26,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem 0rem;
+    padding: 1rem 2rem;
 }
 
 header h1 {
