--- a/css.css
+++ b/css.css
@@ -97,12 +97,12 @@ nav a {
     }
 
     /* Hide regular nav links */
-    .nav-links {
+    .container .nav-links {
         display: none;
     }
 
     /* Show nav links when menu is open */
-    .nav-links.active {
+    .container .nav-links.active {
         display: flex;
     }
 }
