--- a/css.css
+++ b/css.css
@@ -14,7 +14,7 @@ body, h1, h2, p {
 /* Body section */
 body {
     font-family: "Lato", sans-serif;
-    background: linear-gradient(to bottom, #ADD8E6, #ffffff );
+    background: linear-gradient(to bottom, #ADD8E6, #ffffff);
     line-height: 1.6;
     padding: 0;
     margin: 0;
@@ -97,12 +97,12 @@ nav a {
     }
 
     /* Hide regular nav links */
-    .container .nav-links {
+    .nav-links {
         display: none;
     }
 
     /* Show nav links when menu is open */
-    .container .nav-links.active {
+    .nav-links.active {
         display: flex;
     }
 }
@@ -144,8 +144,8 @@ section {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100;
+    height: 100;
     z-index: -1;
 }
 
