--- a/css.css
+++ b/css.css
@@ -106,7 +106,8 @@ nav a {
 
     header h1::after {
         content:"AZC";
-        font-size: 1.2rem;
+        font-family: "Namdhinggo", sans-serif;
+        font-size: 1.5rem;
         margin-left: 5px;
     }
 }
