--- a/css.css
+++ b/css.css
@@ -103,6 +103,15 @@ nav a {
     .nav-links.active {
         display: flex;
     }
+    /* Hide the original name and show the abbreviation */
+    header h1 {
+        display: none;
+    }
+    header::after {
+        content: "AZC";
+        font-family: "Namdhinggo", sans-serif; /* Specify the same font-family as header h1 */
+        font-size: 2rem; /* Adjust the font size as needed */
+    }
 }
 
 /* Main content sections */
